# SuperPoint_FBOW

./: CMakeLists.txt  README.md  build_superpoint.sh  feature_training_fbow.cpp  imagesProcess.py  libtorch_download.sh  loop_closure_fbow.cpp  run.sh
.history/: CMakeLists_20240405130755.txt  CMakeLists_20240405145149.txt  CMakeLists_20240405145212.txt  CMakeLists_20240405145236.txt  CMakeLists_20240405145302.txt  CMakeLists_20240405145310.txt  CMakeLists_20240405145316.txt  CMakeLists_20240405145352.txt  CMakeLists_20240405145429.txt  CMakeLists_20240405145535.txt  CMakeLists_20240405145818.txt  CMakeLists_20240405145850.txt  CMakeLists_20240405145935.txt  CMakeLists_20240405145945.txt  CMakeLists_20240405150637.txt  CMakeLists_20240405150813.txt  CMakeLists_20240405152047.txt  CMakeLists_20240405152105.txt  CMakeLists_20240405152109.txt  CMakeLists_20240405152123.txt  CMakeLists_20240405152135.txt  CMakeLists_20240405152214.txt  CMakeLists_20240405152311.txt  CMakeLists_20240405152332.txt  CMakeLists_20240405152339.txt  CMakeLists_20240405152737.txt  CMakeLists_20240405152924.txt  CMakeLists_20240405152948.txt  CMakeLists_20240405152959.txt  CMakeLists_20240405153005.txt  CMakeLists_20240405153349.txt  CMakeLists_20240405153446.txt  CMakeLists_20240405153702.txt  CMakeLists_20240405153728.txt  CMakeLists_20240405153733.txt  CMakeLists_20240405153738.txt  CMakeLists_20240405153922.txt  CMakeLists_20240405153950.txt  CMakeLists_20240405154459.txt  CMakeLists_20240405154604.txt  (+62 more)
.history/include/: SPextractor_20240405143342.h  SPextractor_20240405143356.h  SPextractor_20240405143401.h  SuperPoint_20240405143448.h  SuperPoint_20240405143449.h
.history/src/: SPextractor_20240405143307.cc  SPextractor_20240405143525.cc  SuperPoint_20240405143533.cc
.history/tests/: CMakeLists_20240406133554.txt
.history/utils/: CMakeLists_20240406133302.txt
fbow/: libtorch_download.sh
lib/fbow/lib/: libfbow.so.0.0.1
src/: CMakeLists.txt
superpoint/: CMakeLists.txt
superpoint/include/: SPextractor.h
superpoint/src/: SPextractor.cc
utils/: CMakeLists.txt  ImageMatching.py  fbow_create_voc_step0.cpp  fbow_create_voc_step0_list.cpp  fbow_create_voc_step1.cpp  image_matching.cpp
utils/superpoint/include/: SuperPoint.h
utils/superpoint/src/: SPextractor.cc  SuperPoint.cc
